# uav-path-planning

./: .gitignore  ARCHITECTURE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  requirements.txt  setup.py  skills-lock.json
.claude/: settings.local.json  skills-lock.json
.claude/skills/: skills-lock.json
.claude/skills/draw-pic/: README.md  SKILL.md
.claude/skills/git-commit-helper/: SKILL.md
.claude/skills/momenta-web-skill/: SKILL.md
.claude/skills/setup-statusline/: SKILL.md  check-momenta-token.sh.template  skill.json  statusline-command.sh.template
LVIZ/: .gitignore  ALGORITHMS_README.md  COVERAGE_PLANNING_GUIDE.md  HOW_TO_ADD_CUSTOM_ALGORITHM.md  PROJECT_SUMMARY.md  QUICK_START_CUSTOM_ALGORITHM.md  README.md  SETUP.md  coverage_planner.py  index.html  package-lock.json  package.json  render_server.py  tif_octree_viewer.html  tif_octree_viewer.py  vite.config.ts
LVIZ/algorithms/: astar_example.py  pso_layer_planner.py
LVIZ/public/: custom_algorithm_template.py
LVIZ/src/: App.tsx  main.tsx  theme.ts
LVIZ/src/components/: BottomChartPanel.tsx  CenterPanel.tsx  ControlPanel.tsx  (+5 more)
Project/: readme.txt
Project/src/uav_planner/: CMakeLists.txt  package.xml
Project/src/uav_planner/include/: Constraint.h  CorridorGeneration.h  Map.h  PathEvaluation.h  PathPlanning.h  TrajectoryPlanner.h  Visualization.h  tif_reader.h
Project/src/uav_planner/src/: Constraint.cpp  CorridorGeneration.cpp  Map.cpp  PathEvaluation.cpp  PathPlanning.cpp  TrajectoryPlanner.cpp  Visualization.cpp  main.cpp  tif_reader.cpp
data/config/: map_config.yaml  planner_config.yaml  uav_params.yaml
example/: main.py
paper/: begin.md  paper.md  刘晓煜-毕设开题报告.docx  开题报告-武汉理工.docx  文献列表.txt
rec/: 2026-03-01_to_03-08.md  2026-03-01_to_03-15_阶段性报告.md  request.md
rl/: README.md  grid_pathfinding_rl.py  解释.md
scripts/: example_usage.py  generate_random_bounce_coverage.py  random_bounce_coverage.py
src/: __init__.py
src/map/: __init__.py  base_map.py  grid_2d.py  map_types.py
src/planner/: __init__.py  base_planner.py
test/: draw_astar.py  draw_astar_animation.py  draw_astar_animation_fast.py  draw_boustrophedon_3rects.py  draw_coverage_ring.py  draw_dijkstra.py  draw_hybrid_astar.py  draw_jps.py  draw_prm.py  draw_pso_layer.py  draw_pso_path.py  draw_random_collision.py  draw_rrt.py  draw_rrt_star.py  draw_theta_star.py  view_animation.py  visualize_value_iteration.py
(+21 files in other folders)
