<?xml version="1.0"?>
<package format="3">
  <name>uav_planner</name>
  <version>0.0.1</version>
  <description>UAV trajectory planning with ROS2 and visualization</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>osqp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>octomap</depend>
  <depend>fcl</depend>
</package>
